<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentUsers"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usergenerator.ui.users.UsersFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/usersRecyclerView"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:layout_marginBottom="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/uploadUsersButton"
        tools:listitem="@layout/item_user"
        tools:itemCount="20" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/uploadUsersButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/errorHolder"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/uploadUsersButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/imageError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/png_no_internet" />

        <TextView
            android:id="@+id/messageError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/no_internet"
            android:textSize="@dimen/_22sp" />

        <TextView
            android:id="@+id/messageErrorAnnotation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/check_internet_connection"
            android:textSize="@dimen/_16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/uploadUsersButton"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_64dp"
        android:layout_margin="@dimen/_8dp"
        android:insetTop="@dimen/_0dp"
        android:insetBottom="@dimen/_0dp"
        app:cornerRadius="@dimen/_12dp"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:textSize="@dimen/_22sp"
        android:text="@string/upload_new_users"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>